--- a/src/style.css
+++ b/src/style.css
@@ -257,6 +257,7 @@ a:focus {
 .main-heading {
   font-size: var(--fontSize-7);
   margin: 0;
+  color: rgb(29, 68, 125);
 }
 
 .post-list-item {
@@ -304,6 +305,7 @@ a:focus {
 
 .blog-post header h1 {
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
+  color: rgb(29, 68, 125);
 }
 
 .blog-post header p {
